--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Xiangwen</h1>
-      <h2 class="project-tagline">相闻：您的社区通讯社</h2>
+      <h2 class="project-tagline">相闻：您的社区通讯员</h2>
       <a href="https://github.com/weipeiran/xwen" class="btn">View on GitHub</a>
       <a href="https://github.com/weipeiran/xwen/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/weipeiran/xwen/tarball/master" class="btn">Download .tar.gz</a>
