--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Xiangwen</h1>
-      <h2 class="project-tagline">相闻：您的社区通讯员</h2>
-      <a href="https://github.com/weipeiran/xwen" class="btn">View on GitHub</a>
-      <a href="https://github.com/weipeiran/xwen/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/weipeiran/xwen/tarball/master" class="btn">Download .tar.gz</a>
+      <h1 class="project-name">相闻</h1>
+      <h2 class="project-tagline">您的社区通讯员</h2>
+      <a href="https://github.com/weipeiran/xwen" class="btn">我们是谁</a>
+      <a href="https://github.com/weipeiran/xwen/zipball/master" class="btn">我们在哪儿</a>
+      <a href="https://github.com/weipeiran/xwen/tarball/master" class="btn">我们做什么</a>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="欢迎来到相闻。 class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
