--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>相闻</title>
+    <title>相闻：􏰀您的社区通讯</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,10 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">相闻</h1>
-      <h2 class="project-tagline">您的社区通讯社</h2>
-      <a href="https://github.com/weipeiran/xiangwen" class="btn">View on GitHub</a>
-      <a href="https://github.com/weipeiran/xiangwen/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/weipeiran/xiangwen/tarball/master" class="btn">Download .tar.gz</a>
+      <h2 class="project-tagline">城市社区资讯入口级应用</h2>
     </section>
 
     <section class="main-content">
