--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://www.xiangwen.biz">相闻</a>文化有限公司版权所有 2016 All Right Reserved</a>.</span>
+        <span class="site-footer-owner">相闻文化有限公司版权所有 2016 All Right Reserved contact@xiangwen.biz</a></span>
 
     </section>
 
