--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系相闻</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>如有任何问题，欢迎垂询：contact@xiangwen.biz.</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Right Reserved Contact@xiangwen.biz</a></span>
+        <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Right Reserved</a></span>
 
     </section>
 
