--- a/index.html
+++ b/index.html
@@ -20,16 +20,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻做什么</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-      <li class="wow fadeIn" data-wow-delay="0s">Wang Miaotong, Chairman of Century Huatong Co. Ltd. in Zhejiang province, tops the 2015 <a href="data.html?generosity" class="no-style shadow-underline">Generosity Index</a> at 5.61% of his publicly disclosed net worth.</li>
-                    <li class="wow fadeIn" data-wow-delay=".1s">He Xiangjian, founder of Midea Group Co. Ltd. in Guangdong, tops the 2015 Giving List at ￥400 million ($63 million).</li>
-                    <li class="wow fadeIn" data-wow-delay=".19s">China's wealthiest prefer to give in their home provinces – six out of every 10 RMB donated by the Top 100 is given locally. China’s poorest <a href="maps.html?flow" class="no-style shadow-underline">areas</a> such as Tibet, Xinjiang, Ningxia, Gansu and Yunnan combined received only 1.96% of top 100 giving.</li>
-                    <li class="wow fadeIn" data-wow-delay=".265s"><a href="data.html?education" class="no-style shadow-underline">Education</a> is the most popular cause of choice. Despite the acute environmental challenges facing China in 2015, <a href="data.html?environment" class="no-style shadow-underline">environmental</a> causes rank last in funding received.</li>
-                    <li class="wow fadeIn" data-wow-delay=".32s">Total donations and pledges of the Top 100 account for a quarter of national donations in 2014.</li>
-                    <li class="wow fadeIn" data-wow-delay=".35s">4 out of the top 10 philanthropists hail from the real estate <a href="data.html?industry" class="no-style shadow-underline">sector.</a></li>
-                    <li class="wow fadeIn" data-wow-delay=".37s">24 of these donors have never appeared in major philanthropic rankings.</li>
-                    <li class="wow fadeIn" data-wow-delay=".385s">Mean: ￥52 million ($8.2 million). Median: ￥20 million ($3.1 million).</li>
-                    <li class="wow fadeIn" data-wow-delay=".395s">China’s top philanthropists average 54 years of <a href="data.html?age" class="no-style shadow-underline">age</a>. In the U.S., average giving as a percentage of net worth increases with age.</li>
-                    <li class="wow fadeIn" data-wow-delay=".405s">China’s philanthropists are professionalizing, with 17 donors operating their own foundations in 2015.</li>
+
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
 
@@ -48,7 +39,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系相闻</h3>
 
-<p>如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz.</p>
+<p>如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz.</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Right Reserved</a></span>
