--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系相闻</h3>
 
-<p>如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz.</a></p>
+<p>如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Right Reserved</a></span>
