--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p>如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Right Reserved</a></span>
+        <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Rights Reserved</a></span>
 
     </section>
 
