--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻做什么</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>专业新闻人员驻扎在社区，担任所在社区新闻记者，浸入式进行报道，充分保证“接地气”，同时用国际化新闻标准提供快速、准确、多样化的原创资讯。我们借鉴国际顶级通讯社模式运作，实行采编和经营分离，保持资讯的纯洁性，强调信源的权威性，做到每一条资讯都有据可考，以此树立在业界的品牌。科技使传播者和受众之间的实时互动成为可能，从而实现：报道的每一条资讯都与社区居民切身相关，且与社区居民切身相关的每一条资讯都被报道。</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
