--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <p>专业新闻人员驻扎在社区，担任所在社区新闻记者，浸入式进行报道，充分保证“接地气”，同时用国际化新闻标准提供快速、准确、多样化的原创资讯。我们借鉴国际顶级通讯社模式运作，实行采编和经营分离，保持资讯的纯洁性，强调信源的权威性，做到每一条资讯都有据可考，以此树立在业界的品牌。科技使传播者和受众之间的实时互动成为可能，从而实现：报道的每一条资讯都与社区居民切身相关，且与社区居民切身相关的每一条资讯都被报道。</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻解决三大痛点</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<li>1) 城市居民缺乏获取所在社区优质资讯的渠道。解决方案：相闻全职记者居住在社区，在总部编辑指挥下全时段全方位报道。基于地理位置推送资讯，用户亦可自主订阅其他社区资讯。<li>
+We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻在哪里</h3>
