--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻做什么</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是什么</h3>
 
-<p>专业新闻人员驻扎在社区，担任所在社区新闻记者，浸入式进行报道，充分保证“接地气”，同时用国际化新闻标准提供快速、准确、多样化的原创资讯。我们借鉴国际顶级通讯社模式运作，实行采编和经营分离，保持资讯的纯洁性，强调信源的权威性，做到每一条资讯都有据可考，以此树立在业界的品牌。科技使传播者和受众之间的实时互动成为可能，从而实现：报道的每一条资讯都与社区居民切身相关，且与社区居民切身相关的每一条资讯都被报道。</p>
+<p>相闻是全球第一款基于地理位置的原创资讯APP，立志为中国城市居民带来最专业的身边的新闻。专业新闻人员驻扎在社区，进行浸入式进行报道，同时借鉴国际顶级通讯社模式运作，以国际化标注几年标准提供快速、准确、多样化的原创社区资讯。移动互联网的进步使传播者和受众之间的实时互动成为可能，从而实现：报道的每一条资讯都与社区居民切身相关，且与社区居民切身相关的每一条资讯都被报道。</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻解决三大痛点</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>解决三大痛点</h3>
 
-<li>城市居民缺乏获取所在社区优质资讯的渠道。解决方案：相闻全职记者居住在社区，在总部编辑指挥下全时段全方位报道。基于地理位置推送资讯，用户亦可自主订阅其他社区资讯。<li>
-<li>社区商家缺乏对消费者进行精准营销的平台。解决方案：专为社区商家提供小额广告发布平台，告别费力不讨好的“小广告”。APP内嵌“点击付费广告”(Pay Per Click)方便各类商家招揽顾客。<li>
-<li>各级政府缺乏发布社区信息的现代化平台。解决方案：作为“第三方组织”帮助政府发布资讯，促进电子政务，减轻基层人员工作负担。配合“智慧社区”的发展，提高政府信息传达效率，因而料将赢得政府支持。<li>
+<li>城市居民缺乏获取所在社区优质资讯的渠道。解决方案：相闻全职记者居住在社区，在总部编辑指挥下全时段全方位报道。基于地理位置推送资讯，用户亦可自主订阅其他社区资讯。
+<li>社区商家缺乏对消费者进行精准营销的平台。解决方案：专为社区商家提供小额广告发布平台，告别费力不讨好的“小广告”。APP内嵌“点击付费广告”(Pay Per Click)方便各类商家招揽顾客。
+<li>各级政府缺乏发布社区信息的现代化平台。解决方案：作为“第三方组织”帮助政府发布资讯，促进电子政务，减轻基层人员工作负担。配合“智慧社区”的发展，提高政府信息传达效率，因而料将赢得政府支持。
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻在哪里</h3>
@@ -39,9 +39,9 @@
 <p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系相闻</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
 
-<p>如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
+<p>相闻创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职于路透社和美国彭博新闻社，担任驻华记者多年，曾报道的领域涵盖中国社会各个重要层面，包括政治、商业、消费、科技、金融、中产阶级生活方式等。现其带领一组均具备国内外名校背景的高级新闻专业人才，深入中国社区，立志打造社区原创资讯第一平台。如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Rights Reserved</a></span>
