--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>解决三大痛点</h3>
 
 <li>城市居民缺乏获取所在社区优质资讯的渠道。解决方案：相闻全职记者居住在社区，在总部编辑指挥下全时段全方位报道。基于地理位置推送资讯，用户亦可自主订阅其他社区资讯。
+
 <li>社区商家缺乏对消费者进行精准营销的平台。解决方案：专为社区商家提供小额广告发布平台，告别费力不讨好的“小广告”。APP内嵌“点击付费广告”(Pay Per Click)方便各类商家招揽顾客。
+
 <li>各级政府缺乏发布社区信息的现代化平台。解决方案：作为“第三方组织”帮助政府发布资讯，促进电子政务，减轻基层人员工作负担。配合“智慧社区”的发展，提高政府信息传达效率，因而料将赢得政府支持。
 
 <h3>
+  
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻在哪里</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
@@ -41,7 +44,8 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
 
-<p>相闻创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职于路透社和美国彭博新闻社，担任驻华记者多年，曾报道的领域涵盖中国社会各个重要层面，包括政治、商业、消费、科技、金融、中产阶级生活方式等。现其带领一组均具备国内外名校背景的高级新闻专业人才，深入中国社区，立志打造社区原创资讯第一平台。如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
+<p>相闻创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职于路透社和美国彭博新闻社，担任驻华记者多年，曾报道的领域涵盖中国社会各个重要层面，包括政治、商业、消费、科技、金融、中产阶级生活方式等。现其带领一组均具备国内外名校背景的高级新闻专业人才，深入中国社区，立志打造社区原创资讯第一平台。
+如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Rights Reserved</a></span>
