--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>解决三大痛点</h3>
 
 <li>城市居民缺乏获取所在社区优质资讯的渠道。解决方案：相闻全职记者居住在社区，在总部编辑指挥下全时段全方位报道。基于地理位置推送资讯，用户亦可自主订阅其他社区资讯。
-
+ </div>
 <li>社区商家缺乏对消费者进行精准营销的平台。解决方案：专为社区商家提供小额广告发布平台，告别费力不讨好的“小广告”。APP内嵌“点击付费广告”(Pay Per Click)方便各类商家招揽顾客。
-
+ </div>
 <li>各级政府缺乏发布社区信息的现代化平台。解决方案：作为“第三方组织”帮助政府发布资讯，促进电子政务，减轻基层人员工作负担。配合“智慧社区”的发展，提高政府信息传达效率，因而料将赢得政府支持。
-
+ </div>
 <h3>
   
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻在哪里</h3>
