--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻在哪里</h3>
 
-<p>2016年，相闻在北京三个社区进行试运行。预计在2016年底在北京进一步铺开，并进入其他重点城市。如果您希望相闻入驻您社区，请与我们联系。</p>
+<p>2016年，相闻将在北京三个社区进行试运行，预计2016年底在全市进一步铺开，并进入其他重点城市。如果您希望相闻入驻您社区，请与我们联系。</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻怎么做</h3>
@@ -39,8 +39,8 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
 
-<p>相闻创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职于路透社和美国彭博新闻社，担任驻华记者多年。报道的领域涵盖中国社会各个重要层面，包括社会、商业、消费、科技、金融、中产阶级生活方式等。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，深入中国社区，立志打造社区原创资讯第一平台。
-如有任何问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
+<p>相闻创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职于英国路透社和美国彭博社，担任驻华记者多年。报道的领域涵盖中国社会各个重要层面，包括社会、商业、消费、科技、金融、中产阶级生活方式等。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，深入中国社区，立志打造社区原创资讯第一平台。
+如有问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Rights Reserved</a></span>
