--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
 
-<p>相闻创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职于英国路透社和美国彭博社，担任驻华记者多年。报道的领域涵盖中国社会各个重要层面，包括社会、商业、消费、科技、金融、中产阶级生活方式等。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，深入中国社区，立志打造社区原创资讯第一平台。
+<p>相闻创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职于英国路透社和美国彭博社，担任驻华记者多年。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，深入中国社区，立志打造社区原创资讯第一平台。
 如有问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
 
       <footer class="site-footer">
