--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻怎么做</h3>
 
-<p>￼全国总部/区域分部统筹进行招聘、运营、宣传、策划。每个社区配备1-3名驻地记者和相应商务拓展人员。记者走街串巷，成为社区居民的眼和耳。记者将稿件传回总部，在编辑帮助下发稿社区居民亦可联系编辑提供新闻线索，核实后予以发表。</p>
+<p>￼全国总部统筹进行招聘、运营、宣传、策划。每个社区配备1-3名驻地记者和相应商务拓展人员。记者走街串巷，成为社区居民的眼和耳。记者将稿件传回总部，在编辑帮助下发稿社区居民亦可联系编辑提供新闻线索，核实后予以发表。</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
