--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 如有问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner">北京相闻文化有限公司版权所有 2016 All Rights Reserved</a></span>
+        <span class="site-footer-owner">北京相闻科技有限公司版权所有 2016 All Rights Reserved</a></span>
 
     </section>
 
