--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="zh-Hans">
   <head>
     <meta charset="UTF-8">
     <title>相闻: 您的社区通讯社</title>
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">相闻</h1>
       <h2 class="project-tagline">城市社区资讯入口级应用</h2>
+      <a class="btn" href="/XiangwenBP.pdf">Business plan</a>
     </section>
 
     <section class="main-content">
