--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">相闻</h1>
       <h2 class="project-tagline">城市社区资讯入口级应用</h2>
-      <a class="btn" href="/XiangwenBP.pdf">Business plan</a>
+      <a class="btn" href="/XiangwenBP.pdf" target="_blank">Business plan</a>
     </section>
 
     <section class="main-content">
