--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">相闻</h1>
-      <h2 class="project-tagline">城市社区资讯入口级应用</h2>
+      <h2 class="project-tagline">中国首家社区通讯社</h2>
       <a class="btn" href="/XiangwenBP.pdf" target="_blank">阅读商业计划书</a>
     </section>
 
