--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">相闻</h1>
       <h2 class="project-tagline">中国首家社区通讯社</h2>
-      <a class="btn" href="/XiangwenBP.pdf" target="_blank">阅读商业计划书</a>
+      <a class="btn" href="/XiangwenBP.pdf" target="_blank">浏览商业计划书</a>
     </section>
 
     <section class="main-content">
