--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
 
 <p>创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职英国路透社和美国彭博社，任驻华记者多年。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，深入中国社区，立志打造社区原创资讯第一平台。
-如有问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>.</p>
+如有问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>。</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner">北京相闻科技有限公司版权所有 2016 All Rights Reserved</a></span>
