--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hans">
   <head>
     <meta charset="UTF-8">
-    <title>相闻: 您的社区通讯社</title>
+    <title>相闻: 天下事不如身边事</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,15 +12,14 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">相闻</h1>
-      <h2 class="project-tagline">中国首家社区通讯社</h2>
-      <a class="btn" href="/XiangwenBP.pdf" target="_blank">浏览商业计划书</a>
+      <h2 class="project-tagline">为你量身定制的社区资讯平台</h2>
     </section>
 
     <section class="main-content">
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是什么</h3>
 
-<p>相闻是全球第一款基于地理位置的原创资讯APP，立志为中国城市居民带来最专业的身边的新闻。相闻扎根社区，借鉴国际顶级通讯社模式运作，以业内最高标准提供快速、准确、多样化的原创社区资讯。</p>
+<p>相闻是全球第一款基于地理位置的原创社区资讯APP，秉承“天下事不如身边事”的原则，致力于为中国城市居民带来最专业的身边的新闻。相闻扎根社区，采用国际顶级通讯社的模式运作，以业内最高标准提供快速、准确、多样化的原创社区资讯。</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>解决三大痛点</h3>
@@ -30,17 +29,17 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻在哪里</h3>
 
-<p>2016年，相闻将在北京三个社区进行试运行。预计年底在全市进一步铺开，并进入其他重点城市。如果您希望相闻入驻所在社区，请与我们联系。</p>
+<p>相闻现已在北京房山和百子湾两个社区进行试运行。预计年底在全市多个社区铺开，并进入其他重点城市。如果您希望相闻入驻所在社区，请与我们联络。</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻怎么做</h3>
 
-<p>全国总部统筹进行招聘、运营、宣传、策划。每个社区配备1-3名驻地资讯收集员和相应商务拓展人员。资讯收集员走街串巷，成为社区居民的眼和耳。收集员将稿件传回总部，在编辑帮助下发稿。社区居民亦可联系相闻提供新闻线索，核实后予以发表。</p>
+<p>全国总部统筹进行招聘、运营、宣传、策划。每个社区配备1-3名驻地资讯专员和商务专员。资讯专员走街串巷，成为社区居民的眼和耳，将稿件传回总部，在编辑帮助下发稿。社区居民亦可联系相闻提供新闻线索，核实后予以发表。</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
 
-<p>创始人魏沛然毕业于哈佛大学肯尼迪政府学院，曾就职英国路透社和美国彭博社，任驻华记者多年。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，深入中国社区，立志打造社区原创资讯第一平台。
+<p>创始人毕业于哈佛大学肯尼迪政府学院，获公共管理硕士学位。此前曾就职英国路透社和美国彭博社，任驻华记者多年。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，深入中国社区，立志打造社区原创资讯第一平台。
 如有问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>。</p>
 
       <footer class="site-footer">
