--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       <h3>
-      <img scr="https://github.com/weipeiran/xiangwen/blob/gh-pages/xwenroadshow.jpg">
+      <img src="https://github.com/weipeiran/xiangwen/blob/gh-pages/xwenroadshow.jpg">
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是什么</h3>
 
   <p>相闻是全球第一款基于地理位置的原创社区资讯APP，秉承“天下事不如身边事”的原则，致力于为中国城市居民带来最专业的身边的新闻。相闻扎根社区，采用国际顶级通讯社的模式运作，以业内最高标准提供快速、准确、多样化的原创社区资讯。</p>
