--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">相闻</h1>
-      <h2 class="project-tagline">为你量身定制的社区资讯平台</h2>
+      <h2 class="project-tagline">苹果Apple Store及各大安卓应用市场均可下载</h2>
     </section>
     <section class="main-content">
 <h3>
