--- a/index.html
+++ b/index.html
@@ -17,27 +17,9 @@
     <section class="main-content">
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是什么</h3>
-  <p>相闻是全球第一款基于地理位置的原创社区资讯APP，秉承“天下事不如身边事”的原则，致力于为中国城市居民带来最专业的身边的新闻。相闻扎根社区，采用国际顶级通讯社的模式运作，以业内最高标准提供快速、准确、多样化的原创社区资讯。</p>
+  <p>相闻是全球第一款基于地理位置的超本地资讯APP，秉承“天下事不如身边事”的原则，致力于为你带来最专业的身边的新闻。</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>解决三大痛点</h3>
-
-<p>城市居民缺乏获取所在社区优质资讯的渠道；社区商家缺乏对消费者进行精准营销的平台；各级政府缺乏发布社区信息的现代化平台。<p>
-  
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻在哪里</h3>
-
-<p>相闻现已在北京房山和百子湾两个社区进行试运行。预计年底在全市多个社区铺开，并进入其他重点城市。如果您希望相闻入驻所在社区，请与我们联络。</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻怎么做</h3>
-
-<p>全国总部统筹进行招聘、运营、宣传、策划。每个社区配备1-3名驻地资讯专员和商务专员。资讯专员走街串巷，成为社区居民的眼和耳，将稿件传回总部，在编辑帮助下发稿。社区居民亦可联系相闻提供新闻线索，核实后予以发表。</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相闻是谁</h3>
-
-<p>创始人毕业于哈佛大学肯尼迪政府学院，获公共管理硕士学位。此前曾就职英国路透社和美国彭博社，任驻华记者多年。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，深入中国社区，立志打造社区原创资讯第一平台。
+<p>创始人毕业于哈佛大学肯尼迪政府学院，获公共管理硕士学位。此前曾就职英国路透社和美国彭博社，任驻华记者多年。现其带领一组均具备国内外名校背景及顶级媒体从业经历的高级新闻专业人士，立志打造超本地资讯第一平台。
 如有问题，欢迎垂询：<a href="mailto:contact@xiangwen.biz">contact@xiangwen.biz</a>。</p>
 
       <footer class="site-footer">
